@@ -39,7 +39,7 @@ public class EnvironmentNether implements EnvironmentBase {
 
   private GLMatrix view = new GLMatrix();
 
-  public void render(int time, float sunLight, Client client) {
+  public void preRender(int time, float sunLight, Client client, XYZ camera, Chunk[] chunks) {
     float zAngle = time;
     zAngle /= (24000f / 360f);
 
@@ -63,4 +63,9 @@ public class EnvironmentNether implements EnvironmentBase {
     glDepthMask(true);
     glDepthFunc(GL_LEQUAL);
   }
+
+  public void postRender(int time, float sunLight, Client client, XYZ camera, Chunk[] chunks) {
+  }
+
+  public void tick() {}
 }
